# saas-template

./: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: _deploy-environment.yml  artifact-build.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml
apps/web/: README.md  components.json  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/src/: proxy.ts
apps/web/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/src/components/: brand-mark.tsx  dashboard-charts.tsx  theme-toggle.tsx
apps/web/src/lib/: env.ts
apps/web/src/types/: next-auth.d.ts
docs/: README.md  ci-cd.md  cicd-setup-guide.md
docs/service/: README.md
docs/service/api/: README.md
infra/terraform/: README.md
infra/terraform/bootstrap/: main.tf  outputs.tf  variables.tf
scripts/: run-python-service-test.mjs  run-python-services.mjs  run-uv.mjs
services/skeleton-lambda-rest/: .env.example  README.md  pyproject.toml
services/skeleton-lambda-rest/src/skeleton_lambda_rest/: __init__.py  config.py  handler.py
services/skeleton-lambda-rest/src/skeleton_lambda_rest/api/: app.py
services/skeleton-lambda-rest/src/skeleton_lambda_rest/api/routes/: __init__.py  auth.py  health.py
services/skeleton-lambda-rest/tests/: conftest.py  test_auth.py  test_auth_decorators.py  test_health.py  test_private.py
services/skeleton-lambda-worker/: .env.example  README.md  pyproject.toml
services/skeleton-lambda-worker/tests/: conftest.py  test_job_service.py
(+115 files in other folders)
