[project]
name = "skeleton_lambda_rest"
version = "0.1.0"
description = "REST Lambda skeleton"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "shared_core",
    "aws_utils",
    "domain_models",
    "aws-lambda-powertools[tracer]>=3.26.0",
    "boto3>=1.42.73",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
]

[tool.uv.sources]
shared_core = { workspace = true }
aws_utils = { workspace = true }
domain_models = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.14.0",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skeleton_lambda_rest"]
